# time_think

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  conftest.py  core.py  database.py  game_statistics.py  gen_task.py  main.py  menu.py  messages.py  pyproject.toml  session.py  test_main.py  test_sandbox.py
app/: core.py  database.py  game_statistics.py  messages.py  session.py  web_api.py
auth/: access_menu.py  authorization.py  config.py  my_account.py  register.py  registration.py  users.csv
files/: users.csv
migrations/versions/: 7ec086a7590f_create_time_think_table.py
test/: test_account_selection.py  test_core.py  test_session.py
