[project]
name = "time-think"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "mypy>=1.17.0",
    "pytest==8.4.1",
]
