[project]
name = "time-think"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.136.1",
    "pre-commit>=4.6.0",
    "pytest>=8.4.1",
    "python-jose[cryptography]>=3.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "pytest==8.4.1",
]
